--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.0",
     "html-webpack-plugin": "^4.5.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
