--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
